--- a/Programma/src/main/java/Resursy/database.properties
+++ b/Programma/src/main/java/Resursy/database.properties
@@ -1,3 +1,3 @@
-url = jdbc:mysql://localhost/pet_farm?serverTimezone=Europe/Moscow&useSSL=false
+url = jdbc:mysql://127.0.0.1:3306/?user=root
 username = root
 password = N64n72n80n90
