--- a/Programma/src/main/java/Resursy/database.properties
+++ b/Programma/src/main/java/Resursy/database.properties
@@ -1,3 +1,3 @@
-url = "jdbc:mysql://127.0.0.1:3306/?user=root"
+url = "jdbc:mysql://127.0.0.1:3306/human_friends_new"
 username = "root"
 password = "N64n72n80n90"
